.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/AccountTeamMember_History__c.object
<CustomObject>
    <description>This Object will hold the changes to PSR that needs to be synced to SVOC</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>This Field will hold the Account to which this records belong to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountTeamMemberHistory</relationshipLabel>
        <relationshipName>AccountTeamMemberHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This holds the value of Account Team object</description>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecentSyncSucceed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecentSyncSucceed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeedToSync__c</fullName>
        <description>True; If the recent sync failed or there is a recent change after the last sync</description>
        <formula>IF(  OR(NOT(IsRecentSyncSucceed__c),RecentChangeDate__c &gt;=  RecentSVOCSync__c)  , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NeedToSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecentChangeDate__c</fullName>
        <description>This filed will hold the modifieddate from the record;</description>
        <label>RecentChangeDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecentSVOCSyncMessage__c</fullName>
        <description>This field will hold the result of the recent sync with SVOC.</description>
        <label>RecentSVOCSyncMessage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecentSVOCSync__c</fullName>
        <description>This field will hold when was the last time this information was tried to sync with SVOC</description>
        <label>RecentSVOCSync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeamMember</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountTeamMemberHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AccountTeamMemberHistory</label>
    <nameField>
        <label>AccountTeamMember_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountTeamMemberHistory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>